--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -1,67 +1,225 @@
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+* {
+	font-family: "Helvectica Neue", "Open Sans", "Arial", sans-serif;
+}
+
 html {
-	min-height: 100%;
+	height: 100%;
 }
 
 body {
+	background-color: whitesmoke;
+	margin:auto;
+	display:block;
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.content {
+	width: 700px;
 	background-color: white;
-	margin: auto;
-	min-height: 100%;
-	font-family: "Book Antiqua";
+	position: absolute;
+	padding:40px;
+	display:block;
+	height: 100%;
+	margin-left: 250px;
+	overflow-y: auto;
 }
 
-#new-task {
-	float:left;
+#new {
+	background-color: whitesmoke;
+	padding: 20px;
 }
 
-#edit {
+button {
+	outline: 0;
+	border:none;
+	text-align: center;
+	color: black;
+	background-color: lightgray;
+	padding: 4px 16px 4px 16px;
+}
+
+button:hover {
+	background-color: darkgrey;
+}
+
+button:active {
+	background-color: lightgrey;
+}
+
+#edit button {
+	outline: 0;
+	border: 1px solid white;
+	border-radius: 1px;
+	text-align: center;
+	color: white;
+	background-color: transparent;
+	padding: 4px 16px 4px 16px;
+}
+
+
+
+#edit-form {
+	border: 1px solid white;
+	border-radius: 1px;
+	padding: 0px 20px 0px 20px;
+}
+
+#sort-select{
+	float:right;
+}
+
+#task-list {
+	margin-bottom: 2px;
+}
+
+.tools {
+	padding: 8px;
+	padding-left: 4px;
+}
+
+.side-menu {
+	background-color: darkslategrey;
+	position: absolute;
+	padding:20px;
+	display:block;
+	width: 250px;
+	height: 100%;
+	overflow-y: auto;
+}
+
+select {
+	border:none;
+	border-bottom: 1px solid lightgray;
+	padding:4px;
+}
+
+select:focus {
+	outline: none;
+}
+
+#new input[type="text"] {
+	width:100%;
+	border-bottom: 1px solid lightgray;
+	margin-bottom: 8px;
+}
+
+#new input[type="date"] {
+	background:transparent;
+	border-bottom: 1px solid transparent;
+}
+
+#new input[type="date"]:hover {
+	background:white;
+	border-bottom: 1px solid lightgray;
+}
+
+#new select {
+	background:transparent;
+	border:none;
+	border-bottom: 1px solid transparent;
+	padding:4px;
+}
+
+#new select:hover {
+	background:white;
+	border:none;
+	border-bottom: 1px solid lightgray;
+	padding:4px;
+}
+
+.task {
+	background-color: whitesmoke;
+	padding: 8px;
+	height: 100%;
+	margin-bottom: 2px;
+}
+
+.task-details {
+	overflow-x: hidden;
+	display:block;
+	font-size: 14px;
+}
+
+.task:hover {
+	background-color: lightgrey;
+}
+
+.task-select {
+	float: left;
+	margin: 0px;
+	margin-right: 4px;
+}
+
+.task-details input[type="text"] {
+	background:transparent;
+	border-bottom: 1px solid transparent;
+	width: 100%;
+	margin-bottom:4px;
+}
+
+.task input[type="date"] {
+	background:transparent;
+	border-bottom: 1px solid transparent;
+	font-size:10px;
+}
+
+
+.task input[type="text"]:focus {
+	background:white;
+	border-bottom: 1px solid lightgray;
+}
+
+/* .task input[type="text"]:hover {
+	border-bottom: 1px solid lightgray;
+}
+
+.task input[type="date"]:hover {
+	border-bottom: 1px solid lightgray;
+}*/
+
+input[type="text"], input[type="date"] {
+	border:none;
+	padding: 4px;
+	font-size: 14px;
+	box-shadow: none;
+}
+
+input[type="text"]:focus, input[type="date"]:focus {
+	outline: none;
+}
+
+#new-confirm {
 	float:right;
 }
 
 #menu {
-	width: 200px;
-	padding: 5px;
-	float: left;
-	background-color: white;
-	clear: left;
-}
-
-#content {
-	background-color: white;
-	width: 100%;
-	float: left;
-	padding: 5px;
-	clear: right;
-}
-
-#tools {
-
-}
-
-#sort {
-
-}
-
-#task-list {
-	
+	max-width: 1000px;
+	color: white;
 }
 
 h1 {
-	font-size: 36px;
+	font-size: 24px;
 }
 
 header {
 	text-align: left;
 }
 
-header, footer {
-	background: black;
+header {
 	color: white;
-	padding: 5px;
-	clear: both;
 }
 
 footer {
 	text-align: center;
+	clear: both;
 }
 
 
