--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -10,6 +10,7 @@
 
 html {
 	height: 100%;
+    width: 100%;
 }
 
 body {
@@ -18,17 +19,63 @@ body {
 	display:block;
 	width: 100%;
 	height: 100%;
+    color: grey;
 	position: relative;
+}
+
+.top {
+    background-color: white;
+    font-weight: bold;
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin:auto;
+}
+
+a {
+    color: grey;
+    text-decoration: none;
+}
+
+.title {
+    float: left;
+    display: block;
+    padding: 0 20px 0 20px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 40px;
+}
+
+a:hover:not(.button) {
+    color: darkslategrey;
+    text-decoration: none;
+}
+
+a.button {
+    border: 1px solid white;
+    color: white;
+    border-radius: 2px;
+    font-size: 14px;
+    padding: 4px 8px 4px 8px;
+    cursor: pointer;
+    transition-property: background, color;
+    transition-duration: 500ms;
+}
+
+a.button:hover {
+    background-color: white;
+    color: darkslategray;
 }
 
 .content {
 	width: 700px;
 	background-color: white;
 	position: absolute;
-	padding:40px;
+	padding: 0 40px 0 40px;
 	display:block;
 	height: 100%;
 	margin-left: 250px;
+    overflow-x: auto;
 	overflow-y: auto;
 }
 
@@ -85,10 +132,13 @@ button:active {
     margin: 0;
 }
 
+aside {
+    padding: 0 20px 0 20px;
+}
+
 .side-menu {
 	background-color: darkslategrey;
 	position: absolute;
-	padding:20px;
 	display:block;
 	width: 250px;
 	height: 100%;
