--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -23,31 +23,35 @@ body {
 	position: relative;
 }
 
-.top {
-    background-color: white;
+ul.menu-bar {
     font-weight: bold;
     display: block;
     width: 100%;
     height: 40px;
-    margin:auto;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
 }
 
-a {
+.menu-item {
+    padding: 0 20px 0 20px;
     color: grey;
-    text-decoration: none;
-}
-
-.title {
     float: left;
     display: block;
-    padding: 0 20px 0 20px;
     text-align: center;
     vertical-align: middle;
     line-height: 40px;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+    transition-property: background, color;
+    transition-duration: 500ms;
+}
+
 a:hover:not(.button) {
-    color: darkslategrey;
+    color: grey;
     text-decoration: none;
 }
 
