fix paths, templates

--- a/views/partials/todo.ejs
+++ b/views/partials/todo.ejs
@@ -1,7 +1,7 @@
 <head>
 		<title>Do IT now</title>
-		<script src="javascripts/todo.js"></script>
-		<script src="javascripts/note.js"></script>
+		<script src="js/todo.js"></script>
+		<script src="js/note.js"></script>
 		<link href="css/todo.css" rel="stylesheet" type="text/css">
         <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
         <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
@@ -15,7 +15,7 @@
 		<section class="side-menu">
             <ul class="menu-bar">
                 <li class="menu-item title">
-                    <a href="index.ejs">D O L I S T</a>
+                    <a href="splash">D O L I S T</a>
                 </li>
             </ul>
 			<aside id="menu">
@@ -23,7 +23,7 @@
 				<header>
 					<h1>Welcome</h1>
 				</header>
-                <a class="button" href="index.ejs">Sign Out</a>
+                <a class="button" href="splash">Sign Out</a>
                 <a class="button" id="background-change">Change</a>
 				<section id="filter">
 					<p>Filter</p>
