--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -9,7 +9,7 @@
         <header>
             <ul class="menu-bar">
                 <li class="menu-item title">
-                    <a href="splash.html">D O L I S T</a>
+                    <a href="splash">D O L I S T</a>
                 </li>
                 <li class="menu-item link">
                     <a href="analytics.html">Dashboard</a>
@@ -21,14 +21,14 @@
                     <a href="">Support</a>
                 </li>
                 <li class="menu-item menu-actions">
-                    <a class="button" href="todo.html">Sign In</a>
+                    <a class="button" href="todo">Sign In</a>
                 </li>
             </ul>
         </header>
          <div class="content1">
             <div class="text-wrapper"><h1>Organise your tasks</h1>
                 <p>Dolist is the easiest way to get stuff done. Whether you're planning a holiday, sharing a shopping list with a parter or managing multiple work projects, all your tasks are in order with dolist.</p>
-                <a class="button" href="todo.html">Start Dolist</a>
+                <a class="button" href="todo">Start Dolist</a>
             </div>
          </div>
          <div class="content2">
