twitter signin fixes

--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -21,7 +21,7 @@
                     <a href="">Support</a>
                 </li>
                 <li class="menu-item menu-actions">
-                    <a class="button" href="todo">Sign In</a>
+                    <a class="button" href="/auth/twitter">Sign In</a>
                 </li>
             </ul>
         </header>
