--- a/views/partials/todo.ejs
+++ b/views/partials/todo.ejs
@@ -1,8 +1,8 @@
 <head>
 		<title>Do IT now</title>
-		<script src="js/todo.js"></script>
-		<script src="js/note.js"></script>
-		<link href="css/todo.css" rel="stylesheet" type="text/css">
+		<script src="/js/todo.js"></script>
+		<script src="/js/note.js"></script>
+		<link href="/css/todo.css" rel="stylesheet" type="text/css">
         <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
         <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
@@ -15,15 +15,15 @@
 		<section class="side-menu">
             <ul class="menu-bar">
                 <li class="menu-item title">
-                    <a href="splash">D O L I S T</a>
+                    <a href="/splash">D O L I S T</a>
                 </li>
             </ul>
 			<aside id="menu">
 				
 				<header>
-					<h1>Welcome</h1>
+					<h1>Welcome, <%= user%> </h1>
 				</header>
-                <a class="button" href="splash">Sign Out</a>
+                <a class="button" href="/splash">Sign Out</a>
                 <a class="button" id="background-change">Change</a>
 				<section id="filter">
 					<p>Filter</p>
